--- a/OpenShift-Dev/processor-deployment.yaml
+++ b/OpenShift-Dev/processor-deployment.yaml
@@ -13,6 +13,8 @@ spec:
       labels:
         app: processor
     spec:
+      nodeSelector:
+        node-role.kubernetes.io/compute: "true"
       containers:
       - env:
         - name: APPDYNAMICS_AGENT_ACCOUNT_ACCESS_KEY
@@ -110,6 +112,7 @@ spec:
         - mountPath: /appdynamics
           name: appdynamics
       restartPolicy: Always
+      serviceAccount: ma
       volumes:
       - name: project
       - name: appdynamics
