--- a/Openshift/adcapitaldb-service.yaml
+++ b/Openshift/adcapitaldb-service.yaml
@@ -1,14 +1,42 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: adcapitaldb
   name: adcapitaldb
+  labels:
+    application: adcapitaldb
 spec:
   ports:
   - name: "3306"
     port: 3306
     targetPort: 3306
-  selector: {}
+    protocol: "TCP"
+  selector:
+    application: adcapitaldb
 status:
   loadBalancer: {}
+
+---
+
+apiVersion: v1
+kind: Pod
+metadata:
+  name: adcapitaldb
+  labels:
+    application: adcapitaldb
+spec:
+  nodeSelector:
+    kubernetes.io/hostname: ip-172-31-26-212.us-west-2.compute.internal
+  containers:
+  - env:
+    - name: MYSQL_ROOT_PASSWORD
+      value: welcome1
+    image: mysql:5.7
+    name: adcapitaldb
+    securityContext:
+      privileged: true
+    ports:
+      - containerPort: 3306
+        protocol: TCP
+    resources: {}
+  restartPolicy: Always
+status: {}
