--- a/Openshift/processor-service.yaml
+++ b/Openshift/processor-service.yaml
@@ -1,16 +1,134 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: processor
   name: processor
+  labels:
+    application: processor
 spec:
   ports:
   - name: "8080"
     port: 8080
     targetPort: 8080
   selector:
-    app: processor
-    environment: dev
+    application: processor
 status:
   loadBalancer: {}
+
+---
+
+apiVersion: v1
+kind: Pod
+metadata:
+  name: processor
+  labels:
+    application: processor
+spec:
+  nodeSelector:
+    kubernetes.io/hostname: ip-172-31-26-212.us-west-2.compute.internal
+  containers:
+  - env:
+    - name: APPDYNAMICS_AGENT_ACCOUNT_ACCESS_KEY
+      valueFrom:
+        secretKeyRef:
+          key: accesskey
+          name: mysecret
+    - name: APPDYNAMICS_AGENT_ACCOUNT_NAME
+      valueFrom:
+        secretKeyRef:
+          key: accountname
+          name: mysecret
+    - name: APPDYNAMICS_AGENT_APPLICATION_NAME
+      valueFrom:
+        configMapKeyRef:
+          key: APPDYNAMICS_AGENT_APPLICATION_NAME
+          name: env-map
+    - name: APPDYNAMICS_CONTROLLER_HOST_NAME
+      valueFrom:
+        configMapKeyRef:
+          key: APPDYNAMICS_CONTROLLER_HOST_NAME
+          name: env-map
+    - name: APPDYNAMICS_CONTROLLER_PORT
+      valueFrom:
+        configMapKeyRef:
+          key: APPDYNAMICS_CONTROLLER_PORT
+          name: env-map
+    - name: APPDYNAMICS_CONTROLLER_SSL_ENABLED
+      valueFrom:
+        configMapKeyRef:
+          key: APPDYNAMICS_CONTROLLER_SSL_ENABLED
+          name: env-map
+    - name: APPD_AGENT_SHA256
+      valueFrom:
+        configMapKeyRef:
+          key: APPD_AGENT_SHA256
+          name: env-map
+    - name: APPD_AGENT_VERSION
+      valueFrom:
+        configMapKeyRef:
+          key: APPD_AGENT_VERSION
+          name: env-map
+    - name: APPD_DIR
+      valueFrom:
+        configMapKeyRef:
+          key: APPD_DIR
+          name: env-map
+    - name: APPD_ES_HOST
+      valueFrom:
+        configMapKeyRef:
+          key: APPD_ES_HOST
+          name: env-map
+    - name: APPD_ES_PORT
+      valueFrom:
+        configMapKeyRef:
+          key: APPD_ES_PORT
+          name: env-map
+    - name: APPD_ES_SSL
+      valueFrom:
+        configMapKeyRef:
+          key: APPD_ES_SSL
+          name: env-map
+    - name: APPD_EVENT_ACCOUNT_NAME
+      valueFrom:
+        configMapKeyRef:
+          key: APPD_EVENT_ACCOUNT_NAME
+          name: env-map
+    - name: RETRY
+      valueFrom:
+        configMapKeyRef:
+          key: RETRY
+          name: env-map
+    - name: TIMEOUT
+      valueFrom:
+        configMapKeyRef:
+          key: TIMEOUT
+          name: env-map
+    - name: ROLE
+      value: processor
+    - name: APPDYNAMICS_AGENT_NODE_NAME
+      value: Processor
+    - name: APPDYNAMICS_AGENT_TIER_NAME
+      value: LoanProcessor-Services
+    image: appddemo/adcapital-tomcat:latest
+    imagePullPolicy: Always
+    name: processor
+    securityContext:
+      privileged: true
+    ports:
+    - containerPort: 8080
+    resources: {}
+    volumeMounts:
+    - mountPath: /project
+      name: project
+    - mountPath: /appdynamics
+      name: appdynamics
+  restartPolicy: Always
+  volumes:
+  - name: project
+  - name: appdynamics
+  initContainers:
+    - image: appddemo/adcapital-project
+      name: provider
+      volumeMounts:
+      - mountPath: /project
+        name: project
+status: {}
